@@ -55,7 +55,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.144 2017/05/02 00:34:06 sjg Exp $
+#	$Id: install-mk,v 1.145 2017/05/09 04:05:32 sjg Exp $
 #
 #	@(#) Copyright (c) 1994 Simon J. Gerraty
 #
@@ -70,7 +70,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20170501
+MK_VERSION=20170505
 OWNER=
 GROUP=
 MODE=444
